build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/php-token-stream/tests/_fixture/class_with_method_named_empty.php.warn
WARNING:4:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:5:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	{
WARNING:7:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	}
